# worklist-oss

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  package.json  rust-toolchain.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  output.rs  unlock_daemon.rs
cli/src/commands/: agents.rs  mod.rs
cli/tests/: proven_flows.rs
crates/client-api/: Cargo.toml
crates/client-api/src/: agents.rs  attachments.rs  audit.rs  client.rs  comments.rs  errors.rs  lib.rs  tasks.rs  users.rs  work_lists.rs
crates/client-auth/: Cargo.toml
crates/client-auth/src/: agent_keys.rs  credentials.rs  http.rs  lib.rs  opaque.rs  storage.rs
crates/client-core/: Cargo.toml
crates/client-core/src/: lib.rs
crates/client-crypto/: Cargo.toml
crates/client-crypto/src/: agent_grants.rs  attachments.rs  cbor.rs  keys.rs  lib.rs  payloads.rs  text_fields.rs
crates/client-runtime/: Cargo.toml
crates/client-runtime/src/: agent_grants.rs  attachments.rs  auth.rs  comments.rs  delete_inputs.rs  keys.rs  lib.rs  models.rs  projections.rs  tasks.rs  unlock.rs  unlock_daemon.rs  work_lists.rs
crates/client-runtime/src/attachments/: classify.rs  download.rs  mod.rs  render.rs
crates/strong-box/: Cargo.toml  README.md
crates/strong-box-wasm/: Cargo.toml
crates/strong-box-wasm/src/: lib.rs
crates/strong-box/src/: error.rs  kdf.rs  key.rs  key_id.rs  lib.rs  rotating_strong_box.rs  shared_strong_box.rs  static_strong_box.rs  stem_strong_box.rs  strong_box.rs  wasm.rs
scripts/: publish-crates.sh
