[workspace]
members = [
    "cli",
    "crates/client-api",
    "crates/client-auth",
    "crates/client-core",
    "crates/client-crypto",
    "crates/client-runtime",
    "crates/strong-box",
    "crates/strong-box-wasm",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-only"

[workspace.dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
chacha20poly1305 = "0.10"
dirs = "5.0"
ed25519-dalek = "2.1.1"
generic-array = "0.14"
hkdf = "0.12.4"
hmac = "0.12.1"
html2md = "0.2.15"
keyring = { version = "3.6.3", features = ["apple-native", "sync-secret-service", "crypto-rust"] }
opaque-ke = { version = "4.0.1", features = ["argon2", "ristretto255"] }
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.8"
strong-box = { path = "crates/strong-box" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
undocx = "0.5.2"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
zeroize = "1.8.1"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
