[package]
name = "worklist"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for working with Worklist tasks, comments, and encrypted workspace data"
repository = "https://github.com/worklistapp/worklist-oss"
homepage = "https://worklist.app"
readme = "../README.md"
keywords = ["worklist", "cli", "tasks", "productivity", "agents"]
categories = ["command-line-utilities", "api-bindings"]
publish = ["crates-io"]

[dependencies]
base64.workspace = true
clap.workspace = true
reqwest.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true

worklist-client-api = { version = "0.1.0", path = "../crates/client-api" }
worklist-client-auth = { version = "0.1.0", path = "../crates/client-auth" }
worklist-client-core = { version = "0.1.0", path = "../crates/client-core" }
worklist-client-crypto = { version = "0.1.0", path = "../crates/client-crypto" }
worklist-client-runtime = { version = "0.1.0", path = "../crates/client-runtime" }

[dev-dependencies]
assert_cmd = "2.0"
axum = "0.8.6"
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
strong-box.workspace = true
tempfile = "3.14"
tokio.workspace = true
uuid.workspace = true
