[package]
name = "worklist-client-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authentication, credential storage, and session helpers for Worklist clients"
repository = "https://github.com/worklistapp/worklist-oss"
homepage = "https://worklist.app"
readme = "../../README.md"
keywords = ["worklist", "auth", "client"]
categories = ["api-bindings"]
publish = ["crates-io"]

[dependencies]
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
generic-array.workspace = true
hkdf.workspace = true
keyring.workspace = true
opaque-ke.workspace = true
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true

worklist-client-core = { version = "0.1.0", path = "../client-core" }

[dev-dependencies]
tempfile = "3.14"
