[package]
name = "worklist-client-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Client-side crypto helpers for Worklist sealed payloads and key derivation"
repository = "https://github.com/worklistapp/worklist-oss"
homepage = "https://worklist.app"
readme = "../../README.md"
keywords = ["worklist", "crypto", "client", "encryption"]
categories = ["cryptography", "api-bindings"]
publish = ["crates-io"]

[dependencies]
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strong-box.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

worklist-client-core = { version = "0.1.0", path = "../client-core" }
