[package]
name = "strong-box-wasm"
edition.workspace = true
version.workspace = true
license = "GPL-3.0-only"
description = "WASM bindings that expose StrongBox ChaCha20-Poly1305 helpers to the Web"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chacha20poly1305 = { version = "0.10", default-features = true, features = ["std"] }
getrandom_02 = { package = "getrandom", version = "0.2" }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
strong-box.workspace = true
x25519-dalek = { version = "2.0", default-features = true, features = ["static_secrets"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["custom"] }
